--- a/server/.gitignore
+++ b/server/.gitignore
@@ -1,6 +1,8 @@
 # Created by https://www.toptal.com/developers/gitignore/api/node
 # Edit at https://www.toptal.com/developers/gitignore?templates=node
+#custom
 local.env
+test_connection.ts
 ### Node ###
 # Logs
 logs
